--- a/mcp-server/.env.example
+++ b/mcp-server/.env.example
@@ -11,6 +11,9 @@ NODE_ENV=development
 MCP_HTTP_ENABLED=false
 MCP_HTTP_PORT=3458
 MCP_HTTP_HOST=0.0.0.0
+# Enable JSON response mode (for clients that can't set Accept headers, e.g., n8n)
+# When enabled, responses are plain JSON instead of SSE streams
+MCP_HTTP_JSON_RESPONSE=false
 
 # Redis Configuration
 # Option 1: Use individual connection parameters
