fix: resolve testifylint issues in S3 integration tests
Fix linting errors reported by golangci-lint:
- Use assert.Positive instead of assert.Greater for positive number checks
- Use require.Error instead of assert.Error for critical error assertions
- Use assert.Len for length comparisons

These changes follow testifylint best practices to make tests more explicit and fail-fast when appropriate.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -205,7 +205,7 @@ jobs:
         ports:
           - 389:389
       test-minio:
-        image: bitnami/minio:latest
+        image: bitnamilegacy/minio:latest
         env:
           MINIO_ROOT_USER: vikunja
           MINIO_ROOT_PASSWORD: vikunjatest
