fix: validate file storage type and reject invalid configurations
Improve file storage initialization to properly validate the configured storage type:

- Return error for invalid file storage types instead of silently falling back to local
- Simplify InitFileHandler logic by returning directly from switch cases
- Update config comment formatting (use backticks for values)

Previously, an invalid storage type would silently fall back to local filesystem.
Now it returns a clear error message: "invalid file storage type 'X': must be 'local' or 's3'"

--- a/config-raw.json
+++ b/config-raw.json
@@ -488,7 +488,7 @@
                 {
                     "key": "type",
                     "default_value": "local",
-                    "comment": "The type of file storage backend. Supported values are 'local' and 's3'."
+                    "comment": "The type of file storage backend. Supported values are `local` and `s3`."
                 },
                 {
                     "key": "s3",
