--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -204,14 +204,6 @@ jobs:
         image: gitea/test-openldap@sha256:b66527e298d6062d5289dc411d1b8da1c593f8140a3d1f863e8d9d021234122f
         ports:
           - 389:389
-      test-minio:
-        image: bitnamilegacy/minio:latest
-        env:
-          MINIO_ROOT_USER: vikunja
-          MINIO_ROOT_PASSWORD: vikunjatest
-          MINIO_DEFAULT_BUCKETS: vikunja-test
-        ports:
-          - 9000:9000
     steps:
       - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5
       - name: Download Mage Binary
@@ -248,6 +240,39 @@ jobs:
           VIKUNJA_AUTH_LDAP_BINDPASSWORD: password
           VIKUNJA_AUTH_LDAP_USERFILTER: "(&(objectclass=inetorgperson)(uid=%s))"
           VIKUNJA_SERVICE_PUBLICURL: http://127.0.0.1:3456
+        run: |
+          mkdir -p frontend/dist
+          touch frontend/dist/index.html
+          chmod +x mage-static
+          ./mage-static test:${{ matrix.test }}
+
+  test-s3-integration:
+    runs-on: ubuntu-latest
+    needs:
+      - mage
+    services:
+      test-minio:
+        image: bitnami/minio:latest
+        env:
+          MINIO_ROOT_USER: vikunja
+          MINIO_ROOT_PASSWORD: vikunjatest
+          MINIO_DEFAULT_BUCKETS: vikunja-test
+        ports:
+          - 9000:9000
+    steps:
+      - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5
+      - name: Download Mage Binary
+        uses: actions/download-artifact@634f93cb2916e3fdff6788551b99b062d0335ce0 # v5
+        with:
+          name: mage_bin
+      - name: Set up Go
+        uses: actions/setup-go@44694675825211faa026b3c33043df3e48a5fa00 # v6
+        with:
+          go-version: stable
+      - name: test S3 file storage integration
+        env:
+          VIKUNJA_TESTS_USE_CONFIG: 1
+          VIKUNJA_DATABASE_TYPE: sqlite
           VIKUNJA_FILES_TYPE: s3
           VIKUNJA_FILES_S3_ENDPOINT: http://localhost:9000
           VIKUNJA_FILES_S3_BUCKET: vikunja-test
@@ -259,7 +284,8 @@ jobs:
           mkdir -p frontend/dist
           touch frontend/dist/index.html
           chmod +x mage-static
-          ./mage-static test:${{ matrix.test }}
+          # Run only the S3 file storage integration tests
+          ./mage-static test:filter "TestFileStorageIntegration"
 
   frontend-lint:
     runs-on: ubuntu-latest
