chore: use bitnami legacy MinIO image for S3 integration tests
Switch from bitnami/minio to bitnamilegacy/minio for better compatibility
in CI environment.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -252,7 +252,7 @@ jobs:
       - mage
     services:
       test-minio:
-        image: bitnami/minio:latest
+        image: bitnamilegacy/minio:latest
         env:
           MINIO_ROOT_USER: vikunja
           MINIO_ROOT_PASSWORD: vikunjatest
