feat: add user mention support in task comments
- Add @tiptap/extension-mention package to enable user mentions
- Create MentionList component for displaying user suggestions
- Implement mentionSuggestion setup with project user fetching
- Update TipTap editor to support mention extension
- Pass projectId to Comments component for user lookup
- Replace regex-based mention detection with HTML parser
- Update backend to extract user IDs from mention HTML spans
- Update all tests to use HTML-based mention format

Frontend changes:
- Install @tiptap/extension-mention@3.9.1 dependency
- Add MentionList.vue with keyboard navigation and avatar display
- Add mentionSuggestion.ts for fetching and filtering project users
- Update TipTap.vue to conditionally render Mention extension
- Add mention styling (blue highlight with hover effects)
- Update Comments.vue to enable mentions with projectId prop
- Update TaskDetailView.vue to pass projectId to Comments

Backend changes:
- Replace @username regex pattern with HTML parser in mentions.go
- Use golang.org/x/net/html to parse mention spans
- Extract user IDs from data-id attributes in mention elements
- Update FindMentionedUsersInText to use GetUsersByIDs instead of GetUsersByUsername
- Update all test cases to use HTML mention format
- All tests passing: TestFindMentionedUsersInText and TestSendingMentionNotification

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -66,6 +66,7 @@
     "@tiptap/extension-image": "3.9.1",
     "@tiptap/extension-link": "3.9.1",
     "@tiptap/extension-list": "3.9.1",
+    "@tiptap/extension-mention": "3.9.1",
     "@tiptap/extension-table": "3.9.1",
     "@tiptap/extension-typography": "3.9.1",
     "@tiptap/extension-underline": "3.9.1",
