--- a/.github/workflows/pr-docker.yml
+++ b/.github/workflows/pr-docker.yml
@@ -1,18 +1,13 @@
 name: PR Docker Build
 
 on:
-  # Support both pull_request (for branch PRs) and pull_request_target (for fork PRs)
   # pull_request_target gives write access to GHCR even for PRs from forks.
   # This is safe because:
   # 1. We explicitly checkout the PR's head commit (no base branch code execution)
   # 2. We ONLY build a Docker image (isolated container, no workflow scripts from PR)
   # 3. No actions that execute PR code in the workflow context (no github-script, etc)
   # 4. Build happens in isolated Docker container with well-defined Dockerfile
-  # This is the recommended pattern for building/publishing PR images from forks.
-  pull_request:
-    types: [opened, synchronize, reopened]
   pull_request_target:
-    types: [opened, synchronize, reopened]
 
 jobs:
   docker:
@@ -24,7 +19,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5
         with:
-          # SECURITY: Explicitly checkout PR's head commit, not base branch.
+          # Explicitly checkout PR's head commit, not base branch.
           # This is safe because no PR code is executed in workflow context.
           # Only Docker build uses the PR code (isolated in container).
           ref: ${{ github.event.pull_request.head.sha }}
