--- a/frontend/package.json
+++ b/frontend/package.json
@@ -38,8 +38,12 @@
     "test:e2e": "playwright test",
     "test:e2e:headed": "playwright test --headed",
     "test:e2e:ui": "playwright test --ui-host=0.0.0.0",
-    "test:cypress": "start-server-and-test preview http://127.0.0.1:4173 'cypress run --e2e --browser chrome'",
     "test:cypress:headed": "start-server-and-test preview http://127.0.0.1:4173 'cypress open --e2e'",
+    "test:cypress:e2e": "start-server-and-test preview http://127.0.0.1:4173 'cypress run --e2e --browser chrome'",
+    "test:cypress:e2e-nix": "CYPRESS_RUN_BINARY=`which Cypress` CYPRESS_API_URL=http://127.0.0.1:3456/api/v1 start-server-and-test preview http://127.0.0.1:4173 'cypress run --e2e --browser chromium'",
+    "test:cypress:e2e-record-test": "start-server-and-test preview:test http://127.0.0.1:4173 'cypress run --e2e --browser chrome --record'",
+    "test:cypress:e2e-dev-dev": "start-server-and-test preview:dev http://127.0.0.1:4173 'cypress open --e2e'",
+    "test:cypress:e2e-dev": "start-server-and-test preview http://127.0.0.1:4173 'cypress open --e2e'",
     "test:unit": "vitest --dir ./src",
     "typecheck": "vue-tsc --build --force",
     "fonts:update": "pnpm fonts:download && pnpm fonts:subset",
@@ -58,22 +62,22 @@
     "@github/hotkey": "3.1.1",
     "@intlify/unplugin-vue-i18n": "11.0.1",
     "@kyvg/vue3-notification": "3.4.2",
-    "@sentry/vue": "10.23.0",
-    "@tiptap/core": "3.10.5",
-    "@tiptap/extension-code-block-lowlight": "3.10.5",
-    "@tiptap/extension-hard-break": "3.10.5",
-    "@tiptap/extension-image": "3.10.5",
-    "@tiptap/extension-link": "3.10.5",
-    "@tiptap/extension-list": "3.10.5",
-    "@tiptap/extension-mention": "3.10.5",
-    "@tiptap/extension-table": "3.10.5",
-    "@tiptap/extension-typography": "3.10.5",
-    "@tiptap/extension-underline": "3.10.5",
-    "@tiptap/extensions": "3.10.5",
-    "@tiptap/pm": "3.10.5",
-    "@tiptap/starter-kit": "3.10.5",
-    "@tiptap/suggestion": "3.10.5",
-    "@tiptap/vue-3": "3.10.5",
+    "@sentry/vue": "10.25.0",
+    "@tiptap/core": "3.8.0",
+    "@tiptap/extension-code-block-lowlight": "3.8.0",
+    "@tiptap/extension-hard-break": "3.8.0",
+    "@tiptap/extension-image": "3.8.0",
+    "@tiptap/extension-link": "3.8.0",
+    "@tiptap/extension-list": "3.8.0",
+    "@tiptap/extension-mention": "3.8.0",
+    "@tiptap/extension-table": "3.8.0",
+    "@tiptap/extension-typography": "3.8.0",
+    "@tiptap/extension-underline": "3.8.0",
+    "@tiptap/extensions": "3.8.0",
+    "@tiptap/pm": "3.8.0",
+    "@tiptap/starter-kit": "3.8.0",
+    "@tiptap/suggestion": "3.8.0",
+    "@tiptap/vue-3": "3.8.0",
     "@vueuse/core": "14.0.0",
     "@vueuse/router": "14.0.0",
     "axios": "1.13.2",
@@ -106,7 +110,7 @@
   },
   "devDependencies": {
     "@4tw/cypress-drag-drop": "2.3.1",
-    "@cypress/vite-dev-server": "7.0.0",
+    "@cypress/vite-dev-server": "7.0.1",
     "@cypress/vue": "6.0.2",
     "@faker-js/faker": "9.9.0",
     "@histoire/plugin-screenshot": "1.0.0-alpha.5",
@@ -115,7 +119,7 @@
     "@tsconfig/node22": "22.0.5",
     "@types/codemirror": "5.60.17",
     "@types/is-touch-device": "1.0.3",
-    "@types/node": "22.19.0",
+    "@types/node": "22.19.1",
     "@types/sortablejs": "1.15.9",
     "@typescript-eslint/eslint-plugin": "8.47.0",
     "@typescript-eslint/parser": "8.47.0",
@@ -129,7 +133,7 @@
     "caniuse-lite": "1.0.30001756",
     "csstype": "3.2.3",
     "cypress": "14.5.4",
-    "esbuild": "0.25.12",
+    "esbuild": "0.27.0",
     "eslint": "9.39.1",
     "eslint-plugin-vue": "10.6.0",
     "happy-dom": "20.0.10",
@@ -151,7 +155,7 @@
     "vite": "7.2.4",
     "vite-plugin-pwa": "1.1.0",
     "vite-plugin-sentry": "1.4.1",
-    "vite-plugin-vue-devtools": "8.0.3",
+    "vite-plugin-vue-devtools": "8.0.5",
     "vite-svg-loader": "5.1.0",
     "vitest": "3.2.4",
     "vue-tsc": "3.1.5",
