feat: migrate cypress e2e tests to playwright (#1739)

--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -20,6 +20,8 @@ coverage
 # Test files
 cypress/screenshots
 cypress/videos
+playwright-report/
+test-results/
 
 # local env files
 .env.local
@@ -41,4 +43,4 @@ cypress/videos
 
 # histoire
 .histoire
-TYPECHECK_ISSUES.md
+package-lock.json
