--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,11 +35,15 @@
     "lint:fix": "pnpm run lint --fix",
     "lint:styles": "stylelint 'src/**/*.{css,scss,vue}'",
     "lint:styles:fix": "pnpm run lint:styles --fix",
-    "test:e2e": "start-server-and-test preview http://127.0.0.1:4173 'cypress run --e2e --browser chrome'",
-    "test:e2e-nix": "CYPRESS_RUN_BINARY=`which Cypress` CYPRESS_API_URL=http://127.0.0.1:3456/api/v1 start-server-and-test preview http://127.0.0.1:4173 'cypress run --e2e --browser chromium'",
-    "test:e2e-record-test": "start-server-and-test preview:test http://127.0.0.1:4173 'cypress run --e2e --browser chrome --record'",
-    "test:e2e-dev-dev": "start-server-and-test preview:dev http://127.0.0.1:4173 'cypress open --e2e'",
-    "test:e2e-dev": "start-server-and-test preview http://127.0.0.1:4173 'cypress open --e2e'",
+    "test:e2e": "playwright test",
+    "test:e2e:headed": "playwright test --headed",
+    "test:e2e:ui": "playwright test --ui-host=0.0.0.0",
+    "test:cypress:headed": "start-server-and-test preview http://127.0.0.1:4173 'cypress open --e2e'",
+    "test:cypress:e2e": "start-server-and-test preview http://127.0.0.1:4173 'cypress run --e2e --browser chrome'",
+    "test:cypress:e2e-nix": "CYPRESS_RUN_BINARY=`which Cypress` CYPRESS_API_URL=http://127.0.0.1:3456/api/v1 start-server-and-test preview http://127.0.0.1:4173 'cypress run --e2e --browser chromium'",
+    "test:cypress:e2e-record-test": "start-server-and-test preview:test http://127.0.0.1:4173 'cypress run --e2e --browser chrome --record'",
+    "test:cypress:e2e-dev-dev": "start-server-and-test preview:dev http://127.0.0.1:4173 'cypress open --e2e'",
+    "test:cypress:e2e-dev": "start-server-and-test preview http://127.0.0.1:4173 'cypress open --e2e'",
     "test:unit": "vitest --dir ./src",
     "typecheck": "vue-tsc --build --force",
     "fonts:update": "pnpm fonts:download && pnpm fonts:subset",
@@ -111,6 +115,7 @@
     "@faker-js/faker": "9.9.0",
     "@histoire/plugin-screenshot": "1.0.0-alpha.5",
     "@histoire/plugin-vue": "1.0.0-alpha.5",
+    "@playwright/test": "1.57.0",
     "@tsconfig/node22": "22.0.5",
     "@types/codemirror": "5.60.17",
     "@types/is-touch-device": "1.0.3",
