feat(openid): add emailclaim config for custom user identifier
Add configuration option to specify an alternative claim to use as the user's email address. This is useful for environments like Azure AD where the standard email claim may not be available or configurable per-app.

The emailclaim option can be set to use claims like 'upn' (User Principal Name) or any other claim containing a unique identifier in email format.

--- a/config-raw.json
+++ b/config-raw.json
@@ -750,6 +750,11 @@
                                             "comment": "The scope necessary to use oidc.\nIf you want to use the Feature to create and assign to Vikunja teams via oidc, you have to add the custom \"vikunja_scope\" and check [openid.md](https://vikunja.io/docs/openid/).\ne.g. scope: openid email profile vikunja_scope"
                                         },
                                         {
+                                            "key": "emailclaim",
+                                            "default_value": "",
+                                            "comment": "This option allows specifying an alternative claim to use as the user's email address. By default, Vikunja uses the standard `email` claim. In environments like Azure AD where users may not have email addresses configured or the email claim cannot be modified per-app, you can set this to use a different claim such as `upn` (User Principal Name) or any other claim that contains a unique identifier in email format. The claim value should be a valid email-like string that can be used to identify the user."
+                                        },
+                                        {
                                             "key": "usernamefallback",
                                             "default_value": "false",
                                             "comment": "This option allows to look for a local account where the OIDC Issuer match the Vikunja local username. Allowed value is either `true` or `false`. That option can be combined with `emailfallback`.\nUse with caution, this can allow the 3rd party provider to connect to *any* local account and therefore potential account hijaking."
