--- a/.github/workflows/pr-docker.yml
+++ b/.github/workflows/pr-docker.yml
@@ -16,6 +16,12 @@ jobs:
       packages: write
       contents: read
     steps:
+      - name: Free Disk Space
+        uses: jlumbroso/free-disk-space@v1.3.1
+        with:
+          large-packages: false
+          docker-images: false
+          swap-storage: false
       - name: Checkout
         uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6
         with:
