chore(tests): remove Cypress, use Playwright exclusively
All E2E tests are now covered by Playwright. This removes:

- Cypress test directory, config, and all related files
- Cypress dependencies (@4tw/cypress-drag-drop, @cypress/vue,
  @cypress/vite-dev-server, cypress, start-server-and-test)
- Cypress npm scripts (test:cypress:*)
- Cypress references in config files

Added 2 missing tests to Playwright that were only in Cypress:
- Should respect filter query parameter from URL
- Should respect search query parameter from URL

Renamed src/directives/cypress.ts to testid.ts since it's used
for data-cy attributes which Playwright also uses.

--- a/frontend/tsconfig.config.json
+++ b/frontend/tsconfig.config.json
@@ -7,7 +7,7 @@
     "env.config.d.ts",
     "vite.config.*",
     "vitest.config.*",
-    "cypress.config.*"
+    "playwright.config.*"
   ],
   "compilerOptions": {
     "composite": true,
