--- a/frontend/package.json
+++ b/frontend/package.json
@@ -91,6 +91,7 @@
     "klona": "2.0.6",
     "lowlight": "3.3.0",
     "marked": "17.0.1",
+    "nanoid": "^5.1.6",
     "pinia": "3.0.4",
     "register-service-worker": "1.7.2",
     "sortablejs": "1.15.6",
