--- a/config-raw.json
+++ b/config-raw.json
@@ -134,6 +134,16 @@
                     "comment": "Enables the public team feature. If enabled, it is possible to configure teams to be public, which makes them\ndiscoverable when sharing a project, therefore not only showing teams the user is member of."
                 },
                 {
+                    "key": "enablereadercomments",
+                    "default_value": "true",
+                    "comment": "Whether to enable comments for users with read access."
+                },
+                {
+                    "key": "enableassigneeedit",
+                    "default_value": "true",
+                    "comment": "Whether to enable task editing for users with read access who are assigned to the task."
+                },
+                {
                     "key": "bcryptrounds",
                     "default_value": "11",
                     "comment": "The number of bcrypt rounds to use during registration. Each increment of this number doubles the computational cost. You probably don't need to change this value."
