--- a/config-raw.json
+++ b/config-raw.json
@@ -616,6 +616,11 @@
                     "key": "gravatarexpiration",
                     "default_value": "3600",
                     "comment": "When using gravatar, this is the duration in seconds until a cached gravatar user avatar expires"
+                },
+                {
+                    "key": "gravatarbaseurl",
+                    "default_value": "https://www.gravatar.com",
+                    "comment": "If you use a Gravatar-compatible service other than gravatar.com, you may configure the base URL for the service here.\nFor instance, gravatarbaseurl: 'https://libravatar.org'. The default is https://www.gravatar.com.\nDo not include a trailing slash."
                 }
             ]
         },
