feat: add required checkbox to confirm issue search before submission
Adds a pre-submission checklist to both bug report and feature request
templates requiring users to confirm they have searched for existing
issues before opening a new one.

--- a/.github/ISSUE_TEMPLATE/bug-report.yml
+++ b/.github/ISSUE_TEMPLATE/bug-report.yml
@@ -17,6 +17,13 @@ body:
            take a moment to check that your issue hasn't been reported before.
         4. Please give all relevant information below for bug reports, because
            incomplete details will be handled as an invalid report and closed.
+  - type: checkboxes
+    id: searched
+    attributes:
+      label: Pre-submission checklist
+      options:
+        - label: I have searched for existing open or closed issue reports with the same problem.
+          required: true
   - type: textarea
     id: description
     attributes:
