chore(renovate): group playwright npm package and docker image together

--- a/renovate.json
+++ b/renovate.json
@@ -61,6 +61,13 @@
       ]
     },
     {
+      "groupName": "playwright",
+      "matchPackageNames": [
+        "@playwright/{/,}**",
+        "mcr.microsoft.com/playwright"
+      ]
+    },
+    {
       "matchCategories": [
         "github-actions",
         "service"
