chore(lint): ignore revive var-naming for stdlib-conflicting package names

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -147,6 +147,9 @@ linters:
           - revive
         path: pkg/utils/*
         text: 'var-naming: avoid meaningless package names'
+      - linters:
+          - revive
+        text: 'var-naming: avoid package names that conflict with Go standard library package names'
     paths:
       - third_party$
       - builtin$
