--- a/pkg/db/fixtures/tasks.yml
+++ b/pkg/db/fixtures/tasks.yml
@@ -412,3 +412,11 @@
   due_date: 2023-03-01 15:00:00
   created: 2018-12-01 01:12:04
   updated: 2018-12-01 01:12:04
+- id: 47
+  title: 'task #47 with reminders outside window'
+  done: false
+  created_by_id: 1
+  project_id: 1
+  index: 32
+  created: 2018-12-01 01:12:04
+  updated: 2018-12-01 01:12:04
