--- a/frontend/package.json
+++ b/frontend/package.json
@@ -52,13 +52,10 @@
   },
   "dependencies": {
     "@floating-ui/dom": "1.7.4",
-    "@fortawesome/fontawesome-svg-core": "7.1.0",
-    "@fortawesome/free-regular-svg-icons": "7.1.0",
-    "@fortawesome/free-solid-svg-icons": "7.1.0",
-    "@fortawesome/vue-fontawesome": "3.1.3",
     "@github/hotkey": "3.1.1",
     "@intlify/unplugin-vue-i18n": "11.0.3",
     "@kyvg/vue3-notification": "3.4.2",
+    "@phosphor-icons/vue": "^2.2.1",
     "@sentry/vue": "10.36.0",
     "@tiptap/core": "3.17.0",
     "@tiptap/extension-code-block-lowlight": "3.17.0",
