feat: add jwtttlshort config key for session tokens
Adds ServiceJWTTTLShort (default 600s) to control the lifetime of
short-lived JWTs issued during token refresh. The existing jwtttl
and jwtttllong keys remain for session expiry and long sessions.

--- a/config-raw.json
+++ b/config-raw.json
@@ -19,6 +19,11 @@
                     "comment": "The duration of the \"remember me\" time in seconds. When the login request is made with\nthe long param set, the token returned will be valid for this period.\nThe default is 2592000 seconds (30 Days)."
                 },
                 {
+                    "key": "jwtttlshort",
+                    "default_value": "600",
+                    "comment": "The duration of short-lived JWT tokens in seconds. These tokens are used together with\nrefresh tokens for session-based authentication.\nThe default is 600 seconds (10 minutes)."
+                },
+                {
                     "key": "interface",
                     "default_value": ":3456",
                     "comment": "The interface on which to run the webserver"
